Add readme changes

--- a/train/train.ipynb
+++ b/train/train.ipynb
@@ -14,6 +14,15 @@
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
     "from sklearn.preprocessing import LabelEncoder"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_DIR = 'data'"
+   ]
   }
  ],
  "metadata": {
