Add Path library

--- a/train/train.ipynb
+++ b/train/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,8 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import Path"
    ]
   },
   {
@@ -21,7 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_DIR = 'data'"
+    "BASE_DIR = Path(__file__).resolve(strict=True).parent\n",
+    "DATA_DIR = Path(BASE_DIR).joinpath('data')\n",
+    "\n",
+    "train_file = Path(DATA_DIR).joinpath('train.csv')\n",
+    "test_file = Path(DATA_DIR).joinpath('train.csv')"
    ]
   }
  ],
