Enhanced and restructured README file. Added comments to train.ipynb

--- a/train/train.ipynb
+++ b/train/train.ipynb
@@ -22,8 +22,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load train and test datasets\n",
     "train = pd.read_csv(r'data/train.csv', sep=';')\n",
     "test = pd.read_csv(r'data/train.csv', sep=';')\n",
+    "\n",
+    "# Concatenate train and test datasets for balancing the classes\n",
     "train = pd.concat([train, test])"
    ]
   },
@@ -47,6 +50,7 @@
     }
    ],
    "source": [
+    "# Check the distribution of the target variable\n",
     "train['y'].value_counts()"
    ]
   },
@@ -56,7 +60,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the number of 'yes' samples\n",
     "yes_sample_size = train['y'].value_counts()['yes']\n",
+    "\n",
+    "# Balance the dataset by sampling 'no' class to match 'yes' class count\n",
     "temp = train[train['y'] == 'no'].sample(n=yes_sample_size)"
    ]
   },
@@ -241,6 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filter out 'no' samples from the train dataset to concatenate with the sampled 'no' class\n",
     "train = train[train['y'] != 'no']"
    ]
   },
@@ -250,6 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Combine the balanced 'no' samples with 'yes' samples\n",
     "train = pd.concat([train, temp])"
    ]
   },
@@ -273,6 +282,7 @@
     }
    ],
    "source": [
+    "# Verify the balancing of the classes\n",
     "train['y'].value_counts()"
    ]
   },
@@ -310,6 +320,7 @@
     }
    ],
    "source": [
+    "# Check for any missing values in the dataset\n",
     "train.isnull().any()"
    ]
   },
@@ -336,6 +347,7 @@
     }
    ],
    "source": [
+    "# Identify numerical columns in the dataset\n",
     "numerical_cols = train.select_dtypes(include=['number']).columns.tolist()\n",
     "print(numerical_cols)\n"
    ]
@@ -360,6 +372,7 @@
     }
    ],
    "source": [
+    "# Display the min and max values for each numerical column\n",
     "for col in numerical_cols:\n",
     "    print(f'{col}\\t\\tmin: {train[col].min()}\\t\\tmax: {train[col].max()}')"
    ]
@@ -378,6 +391,7 @@
     }
    ],
    "source": [
+    "# Identify non-numerical columns in the dataset\n",
     "non_numerical_cols = train.select_dtypes(exclude=['number']).columns.tolist()\n",
     "print(non_numerical_cols)"
    ]
@@ -436,6 +450,7 @@
     }
    ],
    "source": [
+    "# Initialize LabelEncoder and display the encoding for non-numerical columns\n",
     "lab_enc = LabelEncoder()\n",
     "for col in non_numerical_cols:\n",
     "    lab_enc.fit(train[col])\n",
@@ -451,6 +466,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Apply LabelEncoder to non-numerical columns\n",
     "for col in non_numerical_cols:\n",
     "    train[col] = lab_enc.fit_transform(train[col])"
    ]
@@ -627,6 +643,7 @@
     }
    ],
    "source": [
+    "# Display the first few rows of the encoded train dataset\n",
     "train.head()"
    ]
   },
@@ -657,6 +674,7 @@
     }
    ],
    "source": [
+    "# Visualize the correlation matrix using a heatmap\n",
     "import seaborn as sns\n",
     "sns.heatmap(train.corr())"
    ]
@@ -667,6 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop columns 'marital' and 'pdays' based on domain knowledge or correlation analysis\n",
     "train = train.drop(['marital'], axis=1)\n",
     "train = train.drop(['pdays'], axis=1)"
    ]
@@ -677,6 +696,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Separate features (X) and target (y) from the dataset\n",
     "X = train.drop(['y'], axis=1)\n",
     "y = train['y']"
    ]
@@ -687,6 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=101)"
    ]
   },
@@ -844,6 +865,7 @@
     }
    ],
    "source": [
+    "# Display the first few rows of the test dataset\n",
     "X_test.head()"
    ]
   },
@@ -863,6 +885,7 @@
     }
    ],
    "source": [
+    "# Function to train multiple models\n",
     "def model(X_train, y_train):\n",
     "  forest = RandomForestClassifier(n_estimators=10, random_state=0)\n",
     "  forest.fit(X_train, y_train)\n",
@@ -878,6 +901,7 @@
     "\n",
     "  return forest, lreg, tree\n",
     "\n",
+    "odel Evaluation: Random Fores# Train the models and get the trained model objects\n",
     "forest, lreg, tree = model(X_train.values, y_train.values)"
    ]
   },
@@ -897,6 +921,7 @@
     }
    ],
    "source": [
+    "# Make predictions using the trained models\n",
     "y1_predict = forest.predict(X_test.values)\n",
     "print(f'Random Forest {accuracy_score(y_test, y1_predict)}')\n",
     "\n",
@@ -930,6 +955,7 @@
     }
    ],
    "source": [
+    "# Evaluate the performance of the RandomForestClassifier\n",
     "print('Ocena modelu 1. Las')\n",
     "print(classification_report(y_test, y1_predict))"
    ]
@@ -957,6 +983,7 @@
     }
    ],
    "source": [
+    "# Evaluate the performance of the LogisticRegression model\n",
     "print('Ocena modelu 2. Regresja logistyczna')\n",
     "print(classification_report(y_test, y2_predict))"
    ]
@@ -984,6 +1011,7 @@
     }
    ],
    "source": [
+    "# Evaluate the performance of the DecisionTreeClassifier\n",
     "print('Ocena modelu 3. Drzewa decyzyjne')\n",
     "print(classification_report(y_test, y3_predict))"
    ]
@@ -994,6 +1022,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save the trained LogisticRegression model to a file\n",
     "filename = r'../ml_models/banking_model.h5'\n",
     "pickle.dump(lreg, open(filename, 'wb'))"
    ]
